# ACV-DLSS-4.5

./: .clang-format  .editorconfig  .gitignore  BuildAndDeploy.ps1  CMakeLists.txt  CMakePresets.json  FILES_CREATED.md  FIXES.md  GITHUB_RESPONSE.md  INSTALL.bat  INSTALLATION_GUIDE.md  LICENSE  QUICKSTART.md  QUICK_FIX_README.md  README.md  ROADMAP.md  ROADMAP_2026.md  SDK_FIX_SUMMARY.md  Valhalla_Roadmap.md  build.bat  build.ps1  build_scanner.bat  build_stable.bat  complete_setup.ps1  deep_scan_report.txt  deploy_mod.ps1  dlss4_full_integration.cpp  dlss4_full_proxy.cpp  dlss4_real.cpp  dlss4_stable.cpp  dlss4_wrapper.cpp  dxgi.def  dxgi_proxy_mfg.cpp  dxgi_proxy_v2.cpp  external_scanner.cpp  install.ps1  install_mod.bat  install_simple.bat  main.cpp  scanner_report.txt  (+11 more)
.github/workflows/: build.yml
local_headers/: sl_dlss_mfg.h
scripts/: install_web.ps1
src/: auto_ui_generator.h  camera_scanner.cpp  camera_scanner.h  config_manager.cpp  config_manager.h  crash_handler.cpp  crash_handler.h  d3d12_wrappers.cpp  d3d12_wrappers.h  deferred_gc.h  descriptor_tracker.cpp  descriptor_tracker.h  dlss4_config.h  dxgi_wrappers.cpp  dxgi_wrappers.h  error_types.h  ghost_hook.cpp  ghost_hook.h  heuristic_scanner.cpp  heuristic_scanner.h  hooks.cpp  hooks.h  iat_utils.cpp  iat_utils.h  iat_utils_FIXED.cpp  imgui_overlay.cpp  imgui_overlay.h  input_handler.cpp  input_handler.h  jitter_engine.cpp  jitter_engine.h  logger.h  ngx_wrapper.cpp  ngx_wrapper.h  overlay.cpp  overlay.h  pattern_scanner.cpp  pattern_scanner.h  proxy.cpp  proxy.h  (+19 more)
src/cpp26/: hive.h  inplace_vector.h  reflection.h  task_system.h
src/render_passes/: ray_tracing_pass.cpp  ray_tracing_pass.h
src/shaders/: resource_analysis.hlsl  scanner_cs.h  ssrt_compute.h  ssrt_compute.hlsl
src/upscalers/: i_upscaler.h
tests/: CMakeLists.txt  test_camera_scoring.cpp  test_config_serialization.cpp  test_ghost_hook.cpp  test_hive.cpp  test_inplace_vector.cpp  test_main.cpp  test_pattern_scanner.cpp  test_reflection.cpp  test_sampler_interceptor.cpp  test_sentinel.cpp
tests/mocks/: d3d12_mocks.h
tools/: compile_shaders.ps1
tools/TensorBoot/: CMakeLists.txt  integrity_checker.cpp  integrity_checker.h  main.cpp
